# rust-with-actix-web-chat

./: .env  README.md  docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: db_connection_manager.rs  main.rs  message_handler.rs  message_repository.rs
db/init/: 01_create_table.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx
