[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tokio-postgres = "0.7.5"
futures = "0.3"
dotenv = "0.15.0"
rand = "0.8.4"